This file lists all changes made to the game driver in all glory detail.
See the file HISTORY for a user-oriented summary of all the changes.

27-Jan-2010 (Gnomi)
  - Added pretty printers for GDB7 for the main data structures.
    (src/ldmud-gdb.py, gdb/*)

25-Jan-2010 (Gnomi)
  - add_action() leaked the function name string. (#713)
    (actions.c)

23-Jan-2010 (Zesstra)
  - get_type_info() failed to reference the function name it returns, causing
    the string to loose refcounts and being eventually free'd erronenously.
    (#712)
    (efuns.c)

23-Jan-2010 (Gnomi)
  - RTTC on a toplevel function call doesn't remove the first control
    stack frame anymore. (#715)
    (interpret.c)
  - Heartbeats and call_outs now clear current_prog afterwards. (#715)
    (simulate.c, heartbeat.c)

19-Jan-2010 (Gnomi)
  - RTTC in restore_object() didn't handle nonexistent variables
    correctly. (#714)
    (object.c)

22-Dec-2009 (Gnomi)
  - When removing unnecessary F_SAVE_ARG_FRAMEs the compiler didn't
    adjust last_expression correctly in same cases leading to false
    program optimizations. (#683, #708, #709)
    (prolang.y)

05-Nov-2009 (Zesstra)
  - Added pragma 'no_rtt_checks' for disabling the runtime type checks.
    (lex.c)

04-Nov-2009 (Zesstra)
  - Check types in restore_object().
    The types of restored variables are checked for compatibility with their
    type declaration if the objects program sets the pragma rtt_checks. If
    the types are not compatible, restore_object() will raise an error.
    (object.c)
  - Check types of members upon restoring structs.
    While restoring struct members, the types of the members are checked for
    compability with their declared types.
    (interpret.c, interpret.h, object.c)

03-Nov 2009 (Zesstra)
  - to_struct() converts a given struct into a struct with the same type as
    the template struct given as optional second argument.
    This conversion is only done if the template struct is a base of the given